# swayipc-command-builder

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: command.rs  filter.rs  lib.rs  states.rs  tests.rs
src/commands/: assign.rs  border.rs  client.rs  default_border.rs  floating.rs  floating_modifier.rs  floating_size.rs  focus.rs  focus_follows_mouse.rs  focus_on_window_activation.rs  focus_wrapping.rs  fullscreen.rs  gaps.rs  hide_edge_borders.rs  inhibit_idle.rs  layout.rs  mark.rs  max_render_time.rs  mod.rs  mouse_wraping.rs  opacity.rs  popup_during_fullscreen.rs  rename.rs  resize.rs  scratchpad.rs  shortcuts_inhibitor.rs  show_marks.rs  smart_borders.rs  smart_gaps.rs  split.rs  sticky.rs  swap.rs  sway_move.rs  tiling_drag.rs  title_align.rs  titlebar_padding.rs  unbindswitch.rs  unmark.rs  urgent.rs  workspace.rs  (+1 more)
