[package]
name = "swayipc-command-builder"
version = "0.1.0"
authors = ["Jayce Fayne <jayce.fayne@mailbox.org>"]
edition = "2018"
description = "A library for building commands that can be executed by swayipc"
license = "MIT"
repository = "https://github.com/jaycefayne/swayipc-command-builder"
keywords = ["sway", "swaywm", "swayipc","ipc", "builder"]
readme = "README.md"
